--- a/newpage.html
+++ b/newpage.html
@@ -5,25 +5,20 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="stylesheet" type="text/css" href="Assests/css/newpage.css">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
-
-<link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'>
-
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
   
   $("#navbar-collapse").mouseenter(function(){
-  $("href.page-scroll").slideDown( function(){
+  $("href.page-scroll").slideDown( function>
     
 
   });
   });
 });
 </script>
-</head> 
+</head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
 	<div class="container">  
